FIX: single-contact menu now has a higher Z-index and is fully visible; position adjusted to Figma

--- a/src/app/login/main-page/contacts/single-contact/single-contact.scss
+++ b/src/app/login/main-page/contacts/single-contact/single-contact.scss
@@ -168,7 +168,7 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     padding: 0;
     cursor: pointer;
-    z-index: 99;
+    z-index: 97;
 
     img {
       width: 24px;
@@ -187,6 +187,8 @@
     gap: 8px;
     padding: 10px;
     width: 140px;
+    margin-top: 10px;
+    margin-left: 20px;
 
     position: fixed;
     right: 32px;
